Too many changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- class="no-js" -->
+<!-- class="no-js" almost no js-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -104,9 +104,9 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="January 2018 – July 2018">
-                <h3>Freelance</h3>
-                <h4>System Architect</h4>
+            <div data-date="January 2018 – June 2018">
+                <h3><a href="http://www.kosmosbos.com/" target="_blank">KosmosBOS A/S</a><small> - IT Services</small></h3>
+                <h4>System Architect / Chief Information Security Consultant</h4>
                 <p>
 				Responsabilities:
 				<ul>
@@ -131,8 +131,8 @@
 					<li>Wks/Srv platform deployment consolidation</li>
 					<li>VPN to BVPN (MPLS-Orange) Migration</li>
 					<li>Sites Merging</li>
-					<li>S2</li>
-					<li>S3</li>
+					<li>ADFS</li>
+					<li>Azure Major Incident Discovery Improvement</li>
 				</ul>
                 </p>
             </div>
@@ -684,7 +684,7 @@
             </form>
 			<script>
 				var contactform =  document.getElementById('contactform');
-				contactform.setAttribute('action', '//formspree.io/' + 'it' + 'theorist' + '@' + 'gma' + 'il' + '.' + 'com');
+				contactform.setAttribute('action', '//formsp' + 'ree.io/' + 'it' + 'theorist' + '@' + 'gma' + 'il' + '.' + 'com');
 			</script>
 		</div>
         <!-- End #contact-form -->
