--- a/index.html
+++ b/index.html
@@ -218,6 +218,35 @@
 
     <div id="education">
         <h2 class="heading">Education - Trainings</h2>
+		
+		<div class="education-block">
+            <h3>Languages</h3>
+            <span class="education-date"> </span>
+            <h4>Languages</h4>
+			<table>
+			
+				<tr>
+					<th>
+					French (native)
+					</th>
+					<th>
+					English (CEFR C2 / Proficiency)
+					<th>
+				</tr>
+			
+				<tr>
+					<th>
+					Greek (B2 / Business Vantage)
+					</th>
+					<th>
+					Polish (CEFR C1 / Advanced)
+					<th>
+				</tr>
+			
+			</table>
+        </div>
+        <!-- End .education-block -->
+		
         <div class="education-block">
             <h3>Trainings</h3>
             <span class="education-date"> </span>
