--- a/index.html
+++ b/index.html
@@ -226,21 +226,23 @@
 			<table>
 			
 				<tr>
-					<th>
+					<th align="left"><ul style="list-style: none;"><li>
 					French (native)
-					</th>
-					<th>
+					</li></ul></th>
+					<th style="visibility:hidden;">1234</th>
+					<th align="left"><ul style="list-style: none;"><li>
 					English (CEFR C2 / Proficiency)
-					<th>
+					</li></ul></th>
 				</tr>
 			
 				<tr>
-					<th>
-					Greek (B2 / Business Vantage)
-					</th>
-					<th>
+					<th align="left"><ul style="list-style: none;"><li>
+					Greek (CEFR B2 / Business Vantage)
+					</li></ul></th>
+					<th style="visibility:hidden;">1234</th>
+					<th align="left"><ul style="list-style: none;"><li>
 					Polish (CEFR C1 / Advanced)
-					<th>
+					</li></ul></th>
 				</tr>
 			
 			</table>
