--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
         <div id="experience-timeline">
             <div data-date="January 2018 – June 2018">
                 <h3><a href="http://www.kosmosbos.com/" target="_blank">KosmosBOS A/S</a><small> - IT Services</small></h3>
+				<p>
+				ERP Implementation - End to End business solutions
+				</p>
                 <h4>System Architect / Chief Information Security Consultant</h4>
                 <p>
 				Responsabilities:
