--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 					</li></ul></th>
 					<th style="visibility:hidden;">12345678</th>
 					<th align="left"><ul style="list-style: none;"><li>
-					English (CEFR C2 / Mastery)
+					English (CEFR C2 / Proficiency)
 					</li></ul></th>
 				</tr>
 			
