--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2018 ITTheorist - <small> Template by <a href="https://github.com/RyanFitzgerald">RyanFitzgerald</a><br>All logos rights belong to their respective owners</small>
+                        Copyright &copy; 2018 ITTheorist - <small><small> CSS Template by <a href="https://github.com/RyanFitzgerald">RyanFitzgerald</a><br>All CSS/logos rights belong to their respective owners</small></small>
                     </p>
                 </div>
                 <div class="col-sm-2 top">
