--- a/index.html
+++ b/index.html
@@ -707,6 +707,7 @@
     </div>
     <!-- End #skills -->
 
+	<!--googleoff: all-->
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
@@ -726,6 +727,7 @@
         <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
+	<!--googleon: all-->
 
     <footer>
         <div class="container">
