--- a/index.html
+++ b/index.html
@@ -734,11 +734,9 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2018 ITTheorist<small><br>All CSS/logos rights belong to their respective owners</small>
-						<br>
-						<small><small>CSS Template by <a href="https://github.com/RyanFitzgerald">RyanFitzgerald</a>
-						</small></small>
-                    </p>
+                        Copyright &copy; 2018 ITTheorist<small><small> - <a href="https://github.com/RyanFitzgerald">CSS Template</a></small>
+						<br>All CSS/logos rights belong to their respective owners</small>
+	               </p>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
