--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				<p>
 				T/O 30M€ - 400 employees - French company<br />350 PC, 80 Servers, 40 Sites, 50 SW/RT
 				</p>
-                <h4>Systems and Networks Engineer</h4>
+                <h4>System and Network Engineer</h4>
                 <p>
                 Responsabilities:
 				<ul>
