--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2018 ITTheorist<small><small> - <a href="https://github.com/RyanFitzgerald">CSS Template</a></small>
+                        Copyright &copy; 2018 ITTheorist<small><small> - <a href="https://github.com/RyanFitzgerald/devportfolio">CSS Template</a></small>
 						<br>All CSS/logos rights belong to their respective owners</small>
 	               </p>
                 </div>
