--- a/index.html
+++ b/index.html
@@ -223,31 +223,31 @@
         <h2 class="heading">Education - Trainings</h2>
 		
 		<div class="education-block">
-            <!-- <h3>Languages</h3> -->
+            <h3>Languages</h3>
             <span class="education-date"> </span>
-            <h4>Languages</h4>
+            <!-- <h4>Languages</h4> -->
 			<!-- levels based on https://www.cambridgeenglish.org/exams-and-tests/cefr/
 			and https://en.wikipedia.org/wiki/Common_European_Framework_of_Reference_for_Languages -->
 			<table>
 			
 				<tr>
-					<th align="left"><ul style="list-style: none;"><li>
+					<td align="left"><ul style="list-style: none;"><li>
 					French (native)
-					</li></ul></th>
-					<th style="visibility:hidden;">12345678</th>
-					<th align="left"><ul style="list-style: none;"><li>
+					</li></ul></td>
+					<td style="visibility:hidden;">12345678</td>
+					<td align="left"><ul style="list-style: none;"><li>
 					English (CEFR C2 / Proficiency)
-					</li></ul></th>
+					</li></ul></td>
 				</tr>
 			
 				<tr>
-					<th align="left"><ul style="list-style: none;"><li>
+					<td align="left"><ul style="list-style: none;"><li>
 					Greek (CEFR B2 / Business Vantage)
-					</li></ul></th>
-					<th style="visibility:hidden;">12345678</th>
-					<th align="left"><ul style="list-style: none;"><li>
+					</li></ul></td>
+					<td style="visibility:hidden;">12345678</td>
+					<td align="left"><ul style="list-style: none;"><li>
 					Polish (CEFR C1 / Advanced)
-					</li></ul></th>
+					</li></ul></td>
 				</tr>
 			
 			</table>
