--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div data-date="January 2018 – June 2018">
                 <h3><a href="http://www.kosmosbos.com/" target="_blank">KosmosBOS A/S</a><small> - IT Services</small></h3>
 				<p>
-				ERP Implementation - End to End business solutions
+				ERP Implementation - End to End business solutions - Greek company
 				</p>
                 <h4>System Architect / Chief Information Security Consultant</h4>
                 <p>
@@ -116,6 +116,7 @@
                     <li>Exchange - Office 365 Migration ( 200 Accounts )</li>
 					<li>DFS FS (Azure)</li>
 					<li>Systems and networks preparation for Azure migration</li>
+					<li>Security </li>
 					
                 </p>
             </div>
@@ -136,6 +137,7 @@
 					<li>Sites Merging</li>
 					<li>ADFS</li>
 					<li>Azure Major Incident Discovery Improvement</li>
+					<li>Monitoring</li>
 				</ul>
                 </p>
             </div>
@@ -143,7 +145,7 @@
             <div data-date="November 2011 – September 2015">
                 <h3><a href="http://www.kosmosbos.com/" target="_blank">KosmosBOS A/S</a><small> - IT Services</small></h3>
 				<p>
-				ERP Implementation - End to End business solutions
+				ERP Implementation - End to End business solutions - Greek company
 				</p>
                 <h4>Security Officer</h4>
                 <p>
