--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                     <li>Exchange - Office 365 Migration ( 200 Accounts )</li>
 					<li>DFS FS (Azure)</li>
 					<li>Systems and networks preparation for Azure migration</li>
-					<li>Security </li>
+					<li>Network Security log analytics, and diagnostics</li>
+					<li>System and Network monitoring (Nagios/WhatsUP)</li>
 					
                 </p>
             </div>
@@ -137,7 +138,8 @@
 					<li>Sites Merging</li>
 					<li>ADFS</li>
 					<li>Azure Major Incident Discovery Improvement</li>
-					<li>Monitoring</li>
+					<li>Applications monitoring (Iplabel)</li>
+					<li>???</li>
 				</ul>
                 </p>
             </div>
@@ -168,7 +170,8 @@
 				<br />
                 <h4>Project Manager</h4>
                 <p>
-				
+				Gxp? Critical system compliance
+				</br>
 				Responsabilities:
 				<ul>
 					<li>SQL Upgrade 2008R2 and Clustering</li>
