--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
                     <li>Exchange - Office 365 Migration ( 200 Accounts )</li>
 					<li>DFS FS (Azure)</li>
 					<li>Systems and networks preparation for Azure migration</li>
-					<li>Network Security log analytics, and diagnostics</li>
-					<li>System and Network monitoring (Nagios/WhatsUP)</li>
-					
+					<li>Network Security realtime log analytics, and diagnostics (Nagios/Netflow)</li>
+					<li>System and Network monitoring (WhatsUp)</li>
+					<li>CMS Backend</li>
+				</ul>	
                 </p>
             </div>
 
@@ -138,8 +139,9 @@
 					<li>Sites Merging</li>
 					<li>ADFS</li>
 					<li>Azure Major Incident Discovery Improvement</li>
-					<li>Applications monitoring (Iplabel)</li>
-					<li>???</li>
+					<li>Application monitoring (Iplabel)</li>
+					<li>HelpDesk/Inventory with workflow (GLPI with OCS-NG and Fusion Inventory)</li>
+					
 				</ul>
                 </p>
             </div>
@@ -190,6 +192,7 @@
 					<li>Microsoft systems (Windows NT4, 2000, 2003, 2008), Domains trusts</li>
 					<li>LAN/WAN Security (DMZ, ISA, Firewalls, ACS)</li>
 					<li>RIS/WDS Deployment Solution</li>
+					<li>CRM (Cegedim)</li>
 				</ul>
                 </p>
             </div>
