--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@
 						Detail-oriented and proactive with strong troubleshooting training communication and analytical abilities.
 							</li><li>
 						Proven ability to integrate sound strategies and technologies to produce measurable business results.
-							</li><!-- <li>
-						powershell regex versions
-							</li> -->
+							</li><li>
+						Display flexibility in adapting to changing conditions
+							</li><li> 
+						Effectively communicate management decisions to achieve understanding and acceptance.
+							</li>
+							
 						</ul>
 						
 					</p>
