--- a/index.html
+++ b/index.html
@@ -89,10 +89,8 @@
 						Detail-oriented and proactive with strong troubleshooting training communication and analytical abilities.
 							</li><li>
 						Proven ability to integrate sound strategies and technologies to produce measurable business results.
-							</li><li>
-						Display flexibility in adapting to changing conditions
 							</li><li> 
-						Effectively communicate management decisions to achieve understanding and acceptance.
+						Effectively deal with anticipated stressful and changing situations.
 							</li>
 							
 						</ul>
