--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 							Full mesh IPsec VPN with dynamic IPs across countries (FR/GR/PL)
 										
                         </p>
-                        <a href="#">View Project</a>
+                        <!-- <a href="#">View Project</a> -->
                     </div>
                     <!-- End .project-info -->
                 </div>
