--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I have over 15 years of experience in international companies. During the years I have gathered knowledge about system and network development, operations and maintenance.
+                        I have over 15 years of experience in international companies. During the years I have gathered knowledge about system and network development, operations and maintenance in a wide spectrum of fields such as pharmaceutical, industrial, insurance.
 					</p>
 					<p>
 						My objective is to obtain a competitive position in a reputable company located in Europe, where I can use all my knowledge, as well as evolving career path.
