--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 			<div data-date="January 2008 – October 2011">
                 <h3><a href="https://www.takeda.com" target="_blank">Nycomed Pharma AG</a><small> - Pharmaceutical</small></h3>
 				<p>
-				T/O 3500 M€ - 12000 employees - Swiss Group<br />300 PC w/ 150 laptops, 30 Servers, 5 Telco lines, 20 Switches & Routers, 140 Mobile devices
+				T/O 3500 M€ - 12000 employees - Swiss Group<br />4 countries, 500 PC w/ 250 laptops, 50 Servers, 15 Telco lines, 50 Switches & Routers, 140 Mobile devices
 				</p>
 				<br />
                 <h4>Project Manager</h4>
