--- a/index.html
+++ b/index.html
@@ -105,16 +105,16 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="January 2018 – June 2018">
-                <h3><a href="http://www.kosmosbos.com/" target="_blank">KosmosBOS A/S</a><small> - IT Services</small></h3>
+            <div data-date="December 2018 – current">
+                <h3><a href="https://laboratoire-ccd.fr" target="_blank">Laboratoire CCD</a><small> - Laboratoire de la Femme </small></h3>
 				<p>
-				ERP Implementation - End to End business solutions - Greek company
+				Member of PCSAS Holding - 300 Users, 500 Devices, T/O 90M€
 				</p>
-                <h4>System Architect / Chief Information Security Consultant</h4>
+                <h4>System Architect / Chief Information Security Officer / IT Manager</h4>
                 <p>
 				Responsabilities:
 				<ul>
-                    <li>Exchange - Office 365 Migration ( 200 Accounts )</li>
+                    	<li>Exchange - Office 365 Migration ( 200 Accounts )</li>
 					<li>DFS FS (Azure)</li>
 					<li>Systems and networks preparation for Azure migration</li>
 					<li>Network Security realtime log analytics, and diagnostics (Nagios/Netflow)</li>
@@ -123,6 +123,27 @@
 				</ul>	
                 </p>
             </div>
+
+
+	    <div data-date="January 2018 – June 2018">
+                <h3><a href="http://www.kosmosbos.com/" target="_blank">KosmosBOS A/S</a><small> - IT Services</small></h3>
+				<p>
+				ERP Implementation - End to End business solutions - Greek company
+				</p>
+                <h4>System Architect / Chief Information Security Consultant</h4>
+                <p>
+				Responsabilities:
+				<ul>
+                    			<li>Exchange - Office 365 Migration ( 200 Accounts )</li>
+					<li>DFS FS (Azure)</li>
+					<li>Systems and networks preparation for Azure migration</li>
+					<li>Network Security realtime log analytics, and diagnostics (Nagios/Netflow)</li>
+					<li>System and Network monitoring (WhatsUp)</li>
+					<li>CMS Backend</li>
+				</ul>	
+                </p>
+            </div>
+
 
             <div data-date="December 2015 – December 2017">
                 <h3><a href="https://www.mutuelle-familiale.fr" target="_blank">Mutuelle Familiale</a><small> - Health Insurance</small></h3>
