--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>System Architect</h1>
-            <h2>& Network Administrator</h2>
+            <h1>IT Manager</h1>
+            <h2>System Architect / Chief Information Security Officer</h2>
             <!-- <a href="#" class="btn-rounded-white">Download Resume</a> -->
         </div>
         <!-- End #lead-content -->
