--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I have over 15 years of experience in international companies. During the years I have gathered knowledge about system and network development, operations and maintenance in a wide spectrum of fields such as pharmaceutical, industrial, insurance.
+                        I have over 20 years of experience in international companies. During the years I have gathered knowledge about system and network development, operations and maintenance in a wide spectrum of fields such as pharmaceutical, industrial, insurance.
 					</p>
 					<p>
-						My objective is to obtain a competitive position in a reputable company located in Europe, where I can use all my knowledge, as well as evolving career path.
+						My objective is to obtain a competitive position in a reputable company located in Europe, where I can use all my knowledge, as well as an evolving career path.
 					</p>
 					<p>
 						Strengths:
@@ -114,8 +114,14 @@
                 <p>
 				Responsabilities:
 				<ul>
-                    	<li>Exchange - Office 365 Migration ( 200 Accounts )</li>
-					<li>DFS FS (Azure)</li>
+                    			<li>Exchange - Office 365 Migration ( 400 Accounts )</li>
+					<li>Power Apps and workflow design</li>
+					<li>Infrastructure Securisation with :</li>
+						<ul>
+						<li>Fortinet routers/switches/AP/manager</li>
+						<li>VPN with certificates Always-on-VPN</li>
+						<li>802.X for wifi and ethernet</li>
+						</ul>
 					<li>Systems and networks preparation for Azure migration</li>
 					<li>Network Security realtime log analytics, and diagnostics (Nagios/Netflow)</li>
 					<li>System and Network monitoring (WhatsUp)</li>
