--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                 <p>
 				Responsabilities:
 				<ul>
-                    			<li>Exchange - Office 365 Migration ( 400 Accounts )</li>
+					<li>Exchange - Office 365 Migration ( 400 Accounts )</li>
 					<li>Power Apps and workflow design</li>
 					<li>Infrastructure Securisation with :</li>
-						<h5><ul>
-						<li>Fortinet routers/switches/AP/manager</li>
+						<ul>
+						<h5><li>Fortinet routers/switches/AP/manager</li>
 						<li>VPN with certificates Always-on-VPN</li>
-						<li>802.X for wifi and ethernet</li>
-						</ul></h5>
+						<li>802.X for wifi and ethernet</li></h5>
+						</ul>
 					<li>Systems and networks preparation for Azure migration</li>
 					<li>Network Security realtime log analytics, and diagnostics (Nagios/Netflow)</li>
 					<li>System and Network monitoring (WhatsUp)</li>
@@ -140,7 +140,7 @@
                 <p>
 				Responsabilities:
 				<ul>
-                    			<li>Exchange - Office 365 Migration ( 200 Accounts )</li>
+					<li>Exchange - Office 365 Migration ( 200 Accounts )</li>
 					<li>DFS FS (Azure)</li>
 					<li>Systems and networks preparation for Azure migration</li>
 					<li>Network Security realtime log analytics, and diagnostics (Nagios/Netflow)</li>
