--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 					<li>Power Apps and workflow design</li>
 					<li>Infrastructure Securisation with :</li>
 						<ul>
-						<h5><li>Fortinet routers/switches/AP/manager</li>
-						<li>VPN with certificates Always-on-VPN</li>
-						<li>802.X for wifi and ethernet</li></h5>
+						<li>Fortinet routers/switches/AP/manager</li>
+						<li><h5>VPN with certificates Always-on-VPN</h5></li>
+						<li>802.X for wifi and ethernet</li>
 						</ul>
 					<li>Systems and networks preparation for Azure migration</li>
 					<li>Network Security realtime log analytics, and diagnostics (Nagios/Netflow)</li>
