--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					<li>Infrastructure Securisation with :</li>
 						<ul>
 						<li>Fortinet routers/switches/AP/manager</li>
-						<li><h5>VPN with certificates Always-on-VPN</h5></li>
+						<li>VPN with certificates Always-on-VPN</li>
 						<li>802.X for wifi and ethernet</li>
 						</ul>
 					<li>Systems and networks preparation for Azure migration</li>
