--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
                 <p>
 				Responsabilities:
 				<ul>
+					<li>Analysing and reporting on the functionality of IT systems</li>
+					<li>Selection and purchasing hardware and software</li>
+					<li>Managing projects and installation of new systems</li>
+					<li>Ensuring software licensing laws are followed</li>
+					<li>implementing and managing security/integrity and backup procedures</li>
+					<li>scheduling upgrades</li>
+					<li>managing secure remote accesses</li>
+					<li>manage and train IT/IS staff</li>
+
 					<li>Exchange - Office 365 Migration ( 400 Accounts )</li>
 					<li>Power Apps and workflow design</li>
 					<li>Infrastructure Securisation with :</li>
@@ -125,7 +134,7 @@
 					<li>Systems and networks preparation for Azure migration</li>
 					<li>Network Security realtime log analytics, and diagnostics (Nagios/Netflow)</li>
 					<li>System and Network monitoring (WhatsUp)</li>
-					<li>CMS Backend</li>
+					<li>ERP Sap</li>
 				</ul>	
                 </p>
             </div>
