--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
 					<li>ERP Sap</li>
 				</ul>	
                 </p>
+                <p>
+				Achievements:
+				<ul>
+					<li>A</li>
+					<li>B</li>
+					<li>C</li>
+				</ul>	
+                </p>
+
             </div>
 
 
